--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     ]
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.55.4",
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.53.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
