--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.55.4",
+    "axios": "^1.7.7",
     "next": "14.2.7",
+    "openai": "^4.61.0",
     "react": "^18",
     "react-dom": "^18"
   },
