--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
   "dependencies": {
     "@tanstack/react-query": "^5.55.4",
     "axios": "^1.7.7",
+    "file-saver": "^2.0.5",
+    "jszip": "^3.10.1",
     "next": "14.2.7",
     "openai": "^4.61.0",
+    "qrcode.react": "^4.0.1",
     "react": "^18",
     "react-dom": "^18"
   },
@@ -37,6 +40,7 @@
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
+    "@types/file-saver": "^2.0.7",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "^14.2.8",
     "eslint-config-prettier": "^9.1.0",
