--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,8 +1,11 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
     "paths": {
+      "@/*": ["./*"],
       "@src/*": ["./src/*"],
-      "@public/*": ["./public/*"]
+      "@components/*": ["./src/components/*"],
+      "@utils/*": ["./src/lib/utils/*"],
     }
   }
 }
