--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     ]
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.45.4",
     "@tanstack/react-query": "^5.55.4",
     "axios": "^1.7.7",
     "file-saver": "^2.0.5",
