--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     ]
   },
   "dependencies": {
+    "@supabase-cache-helpers/postgrest-react-query": "^1.10.1",
+    "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.4",
     "@tanstack/react-query": "^5.55.4",
     "axios": "^1.7.7",
