--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
     "@tanstack/react-query": "^5.55.4",
     "axios": "^1.7.7",
     "file-saver": "^2.0.5",
+    "formik": "^2.4.6",
     "jszip": "^3.10.1",
     "next": "14.2.7",
     "openai": "^4.61.0",
     "qrcode.react": "^4.0.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.53.0",
