--- a/package.json
+++ b/package.json
@@ -28,12 +28,13 @@
     "@supabase-cache-helpers/postgrest-react-query": "^1.10.1",
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.4",
+    "@heroicons/react": "^2.1.5",
     "@tanstack/react-query": "^5.55.4",
     "axios": "^1.7.7",
     "file-saver": "^2.0.5",
     "formik": "^2.4.6",
     "jszip": "^3.10.1",
-    "next": "14.2.7",
+    "next": "^14.2.13",
     "openai": "^4.61.0",
     "qrcode.react": "^4.0.1",
     "react": "^18",
