--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     ]
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.5",
     "@supabase-cache-helpers/postgrest-react-query": "^1.10.1",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.4",
-    "@heroicons/react": "^2.1.5",
     "@tanstack/react-query": "^5.55.4",
     "axios": "^1.7.7",
     "file-saver": "^2.0.5",
