--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -65,7 +65,10 @@
         "simple-import-sort/exports": "warn",
         "import/prefer-default-export": "off",
         "import/no-extraneous-dependencies": "off", // Allow devDependencies
-        "jsx-a11y/label-has-associated-control": "off"
+        "jsx-a11y/label-has-associated-control": "off",
+        "jsx-a11y/click-events-have-key-events": "off",
+        "jsx-a11y/no-static-element-interactions": "off",
+        "no-unused-vars": "warn"
       }
     }
   ]
