--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -70,7 +70,9 @@
         "jsx-a11y/no-static-element-interactions": "off",
         "no-unused-vars": "warn",
         "no-console": "off",
-        "no-alert": "off"
+        "no-alert": "off",
+        "no-restricted-globals": "off",
+        "react/button-has-type": "off"
       }
     }
   ]
