Fix: optimize the order modal window component

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -72,7 +72,8 @@
         "no-console": "off",
         "no-alert": "off",
         "no-restricted-globals": "off",
-        "react/button-has-type": "off"
+        "react/button-has-type": "off",
+        "react/jsx-no-useless-fragment": "off"
       }
     }
   ]
