--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@supabase/supabase-js": "^2.45.6",
     "@tanstack/react-query": "^5.55.4",
     "axios": "^1.7.7",
+    "dnd-multi-backend": "^8.0.3",
     "file-saver": "^2.0.5",
     "formik": "^2.4.6",
     "jszip": "^3.10.1",
@@ -39,6 +40,11 @@
     "openai": "^4.61.0",
     "qrcode.react": "^4.0.1",
     "react": "^18",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
+    "react-dnd-multi-backend": "^8.0.3",
+    "react-dnd-touch-backend": "^16.0.1",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
