--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
+    "react-toastify": "^10.0.6",
     "yup": "^1.4.0"
   },
   "devDependencies": {
