--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -76,7 +76,8 @@
         "react/jsx-no-useless-fragment": "off",
         "no-nested-ternary": "off",
         "no-new": "off",
-        "no-unused-expressions": "off"
+        "no-unused-expressions": "off",
+        "consistent-return": "off"
       }
     }
   ]
