--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.6",
     "@tanstack/react-query": "^5.55.4",
+    "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "dnd-multi-backend": "^8.0.3",
     "file-saver": "^2.0.5",
@@ -48,6 +49,7 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
+    "react-spinners": "^0.15.0",
     "react-toastify": "^10.0.6",
     "yup": "^1.4.0"
   },
